fixed the horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,15 @@
-*{
-  margin: 0;
-  padding: 0;
-}
 
-.frame{
-  margin-left: 100px;
-  top: 0%;
-  left: 0;
 
-}
+
 
 .App{
  position: relative;
   background-color: rgb(0, 0, 0);
   left: 0;
   top: 0;
-  width:100%;
-  height: 100%;
-  scroll-snap-type: x mandatory;
+  width:100vw;
+  height:100vh;
+  scroll-snap-type: x proximity;
   
  overflow:scroll;
 
@@ -31,9 +23,7 @@
 .App::-webkit-scrollbar {
   display: none;
 }
-body{
-  overflow-y: hidden;
-}
+
 .background{
   position: fixed;
   top: 0;
