--- a/src/components/frame/frame.css
+++ b/src/components/frame/frame.css
@@ -1,37 +1,56 @@
 .frame{
+
     background-color:transparent;
     width:fit-content;
     left: 0%;
     top:0%;
-    height: 100vh;
-    position: relative;
+    height:100vh;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+  
+    margin-left: 100px;
+
 }
 
-body{
-    overflow-y: hidden;
+.layers_container{
+  position: absolute;
+  height: 100vh;
+  width:100%;
+  overflow: hidden;
 }
+
 
 .background2{
     position: absolute;
-    left:50%;
-    top: 50%;
-    width: 50px;
-    height: 50px;
-    background-color: red;
-    transition: 1s;
+    left:0%;
+    top:20% ;
+   
+    width:200%;
+    overflow: hidden;
+    
+    transition: 4s;
+  }
+
+  .background2 img{
+   position: relative;
+   
+    width: 100%;
+    height: 100%;
+   
+    object-fit: cover;
   }
   .background3{
     position: absolute;
-    left:0%;
+    left:25%;
     top: 0%;
-    width: 25%;
+    width: 12.5%;
     height: 100%;
     background-color: rgb(22, 22, 22);
     transition: 1s;
+    z-index: 3;
+   
   }
   .background4{
     position: absolute;
@@ -42,5 +61,6 @@ body{
     background-color: rgb(20, 20, 20);
    
     transition: 1s;
+    z-index: 3;
   }
 
