--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
 
 
 body {
+  
+ 
   position: relative;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,8 +22,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   
   background-color: rgb(5, 5, 5);
-  
- overflow: hidden;
+  overflow-y: hidden;
+ 
   
 }
 
@@ -32,8 +34,10 @@ code {
     
 }
 #root{
+  position: relative;
  display: flex;
 
+overflow-y: hidden;
 
  
 }
